# DataStructures

./: .gitignore  Array.cpp  Array.h  AutomaticTests.cpp  AutomaticTests.h  CMakeLists.txt  Heap.cpp  Heap.h  List.cpp  List.h  ListElement.cpp  ListElement.h  ManualTests.cpp  ManualTests.h  Timer.cpp  Timer.h  Tree.cpp  Tree.h  TreeElement.cpp  TreeElement.h  main.cpp
Results/Array/: 100ea.txt  100fa.txt  100find.txt  100ia.txt  100rf.txt  100ri.txt  100rl.txt  addindex1000.txt  addkon1000.txt  addpocz1000.txt  losowe_100.txt  pokaz1000.txt  szukaj1000.txt  tablica_dodajNaKoniec_100.txt  tablica_dodajNaKoniec_1000.txt  tablica_dodajNaPoczatek_100.txt  tablica_dodajNaPoczatek_1000.txt  tablica_dodajWybrane_100.txt  tablica_dodajWybrane_1000.txt  tablica_szukaj_100.txt  tablica_szukaj_1000.txt  tablica_usunKoniec_100.txt  tablica_usunKoniec_1000.txt  tablica_usunPoczatek_100.txt  tablica_usunPoczatek_1000.txt  tablica_usunWybrane_100.txt  tablica_usunWybrane_1000.txt  usunindex1000.txt  usunostratni1000.txt  uusnpierwszy1000.txt
Results/Heap/: 100.txt  a  aaa  aaaa.txt  ad1k.txt  add100.txt  add1oo.txt  aw.txt  find100.txt  find1k.txt  lll  show1k.txt  testlast.txt  wynik2kclion.txt  wyniki100show.txt  wyniki2k.txt
Results/List/: fa100.txt  find100.txt  ia100.txt  indexdodaj1000.txt  koniecdodaj1000.txt  la100.txt  poczatekdodaj1000.txt  pokaz1000.txt  rf100.txt  rl100.txt  usunindex1000.txt  usunostatni1000.txt  usunpierwszy1000.txt
Results/Tree/: add100.txt  add1k.txt  find100.txt  remove100.txt  remove1k.txt  show1k.txt  szukaj1k.txt  wtnikusun.txt  wynik.txt
